new site-permissions modules added to the project (api, impl and store)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -196,6 +196,9 @@ dependencies {
     internalImplementation project(path: ':traces-api')
     internalImplementation project(path: ':traces-impl')
 
+    implementation project(path: ':site-permissions-api')
+    implementation project(path: ':site-permissions-impl')
+
     implementation project(path: ':bandwidth-impl')
     implementation project(path: ':bandwidth-store')
 
