--- a/app/build.gradle
+++ b/app/build.gradle
@@ -193,6 +193,9 @@ dependencies {
     implementation project(path: ':downloads-impl')
     implementation project(path: ':downloads-store')
 
+    implementation project(path: ':autoconsent-api')
+    implementation project(path: ':autoconsent-impl')
+
     internalImplementation project(path: ':traces-api')
     internalImplementation project(path: ':traces-impl')
 
