--- a/autoconsent/autoconsent-impl/build.gradle
+++ b/autoconsent/autoconsent-impl/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation project(path: ':common')
     implementation project(path: ':common-ui')
     implementation project(path: ':autoconsent-api')
+    implementation project(path: ':autoconsent-store')
 
     implementation Kotlin.stdlib.jdk7
     implementation AndroidX.appCompat
