--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     implementation "androidx.core:core-ktx:_"
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:_"
+
+    // Lottie
+    implementation "com.airbnb.android:lottie:_"
 }
