--- a/autoconsent/autoconsent-impl/build.gradle
+++ b/autoconsent/autoconsent-impl/build.gradle
@@ -18,7 +18,6 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'com.squareup.anvil'
-    id 'kotlin-android-extensions'
 }
 
 apply from: "$rootProject.projectDir/gradle/android-library.gradle"
@@ -30,6 +29,10 @@ dependencies {
     implementation project(path: ':di')
     implementation project(path: ':common')
     implementation project(path: ':common-ui')
+    implementation project(path: ':privacy-config-api')
+    implementation project(path: ':feature-toggles-api')
+    implementation project(path: ':app-build-config-api')
+    implementation project(path: ':app-store')
     implementation project(path: ':autoconsent-api')
     implementation project(path: ':autoconsent-store')
 
@@ -49,6 +52,7 @@ dependencies {
     implementation AndroidX.core.ktx
     implementation AndroidX.lifecycle.viewModelKtx
     implementation AndroidX.lifecycle.runtimeKtx
+    implementation AndroidX.room.runtime
 
     // Testing dependencies
     testImplementation project(path: ':common-test')
@@ -59,7 +63,7 @@ dependencies {
     testImplementation AndroidX.test.ext.junit
     testImplementation "androidx.test:runner:_"
     testImplementation Testing.robolectric
-
+    testImplementation 'app.cash.turbine:turbine:_'
     testImplementation project(path: ':common-test')
 }
 
