--- a/autoconsent/autoconsent-store/build.gradle
+++ b/autoconsent/autoconsent-store/build.gradle
@@ -1,19 +1,27 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 apply from: "$rootProject.projectDir/gradle/android-library.gradle"
 
 dependencies {
     implementation project(path: ':autoconsent-api')
+    implementation project(path: ':common')
 
     implementation AndroidX.core.ktx
     implementation KotlinX.coroutines.core
 
+    // Room
+    implementation AndroidX.room.runtime
+    implementation AndroidX.room.ktx
+    kapt AndroidX.room.compiler
+    testImplementation AndroidX.room.testing
+
     // Testing dependencies
     testImplementation Testing.junit4
+    testImplementation "org.mockito.kotlin:mockito-kotlin:_"
     testImplementation AndroidX.test.ext.junit
     testImplementation Testing.robolectric
     testImplementation (KotlinX.coroutines.test) {
@@ -21,6 +29,7 @@ dependencies {
         // conflicts with mockito due to direct inclusion of byte buddy
         exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
     }
+    testImplementation project(path: ':common-test')
 }
 
 android {
